--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ dotenvy = "0.15.7"
 reqwest = { version = "0.12.7", features = ["json"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
+tokio = { version = "1.40.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
