--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,23 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 clap = { version = "4.5.18", features = ["derive"] }
 derive_more = { version = "1.0.0", features = ["full"] }
-dotenvy = "0.15.7"
+jsonwebtoken = "9.3.0"
 reqwest = { version = "0.12.7", features = ["json"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
+toml = "0.8.19"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+url = "2.5.2"
+
+[profile.dev]
+debug = 0
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
