--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = { version = "0.7.7", features = ["macros"] }
 chrono = "0.4.38"
 clap = { version = "4.5.18", features = ["derive"] }
 derive_more = { version = "1.0.0", features = ["full"] }
@@ -13,6 +14,8 @@ serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
 toml = "0.8.19"
+tower = "0.5.1"
+tower-http = { version = "0.6.1", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 url = "2.5.2"
