--- a/config-client-example.toml
+++ b/config-client-example.toml
@@ -1,3 +1,4 @@
 tunnel_address = "127.0.0.1:9001"
-target_url = "127.0.0.1:3000"
+target_host = "127.0.0.1"
+target_port = 4200
 jwt_secret = "secret"
