--- a/config-server-example.toml
+++ b/config-server-example.toml
@@ -1,4 +1,11 @@
+# Webhook mode
 web_address = "127.0.0.1:9000"
 tunnel_port = 9001
 webhook_path = "/webhook"
 jwt_secret = "secret"
+
+# Website mode
+# web_address = "127.0.0.1:9000"
+# tunnel_port = 9001
+# webhook_path = "*"
+# jwt_secret = "secret"
