--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tower-http = { version = "0.6.1", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 url = "2.5.2"
+uuid = { version = "1.10.0", features = ["v7", "std", "fast-rng"] }
 
 [profile.dev]
 debug = 0
