--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,16 @@ name = "webhook-rs"
 version = "0.2.1"
 edition = "2021"
 
+[[bin]]
+name = "webhook-server"
+test = false
+bench = false
+
+[[bin]]
+name = "webhook-client"
+test = false
+bench = false
+
 [dependencies]
 axum = { version = "0.7.7", features = ["macros"] }
 chrono = "0.4.38"
