--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,20 @@ test = false
 bench = false
 
 [dependencies]
-axum = { version = "0.7.7", features = ["macros"] }
+axum = { version = "0.7.7", features = ["macros", "ws"] }
+axum-extra = { version = "0.9.4", features = ["typed-header"] }
 chrono = "0.4.38"
 clap = { version = "4.5.18", features = ["derive"] }
 derive_more = { version = "1.0.0", features = ["full"] }
+futures = "0.3"
+futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
+headers = "0.4.0"
 jsonwebtoken = "9.3.0"
 reqwest = { version = "0.12.7", features = ["json"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
+tokio-tungstenite = "0.24.0"
 toml = "0.8.19"
 tower = "0.5.1"
 tower-http = { version = "0.6.1", features = ["trace"] }
