--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ tower = "0.5.1"
 tower-http = { version = "0.6.1", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+tungstenite = { version = "0.24.0", features = ["native-tls"] }
 url = "2.5.2"
 uuid = { version = "1.10.0", features = ["v7", "std", "fast-rng"] }
 
