--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,9 @@
-[package]
-name = "webhook-rs"
-version = "0.2.3"
-edition = "2021"
+[workspace]
+resolver = "2"
 
-[[bin]]
-name = "webhook-server"
-test = false
-bench = false
+members = [ "webhook","webhook-client", "webhook-server", "zerror"]
 
-[[bin]]
-name = "webhook-client"
-test = false
-bench = false
-
-[dependencies]
+[workspace.dependencies]
 axum = { version = "0.7.7", features = ["macros", "ws"] }
 chrono = "0.4.38"
 clap = { version = "4.5.18", features = ["derive"] }
@@ -34,11 +24,3 @@ tracing-subscriber = "0.3.18"
 tungstenite = { version = "0.24.0", features = ["native-tls"] }
 url = "2.5.2"
 uuid = { version = "1.10.0", features = ["v7", "std", "fast-rng"] }
-
-[profile.dev]
-debug = 0
-
-[profile.release]
-lto = true
-codegen-units = 1
-panic = "abort"
