--- a/webhook/Cargo.toml
+++ b/webhook/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "webhook"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
 chrono.workspace = true
+derive_more.workspace = true
 jsonwebtoken.workspace = true
 serde.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 uuid.workspace = true
-zerror = { path = "../zerror" }
